trunk/versions/y.output
   0  $accept : program $end

   1  program : definitions usercode

   2  definitions : crowd_definitions park_definition crowd_definitions

   3  crowd_definitions : crowd_definitions crowd_definition
   4                    | empty

   5  usercode : start

   6  $$1 :

   7  $$2 :

   8  crowd_definition : Crowd $$1 crowd_name $$2 crowd_elements

   9  crowd_elements : SEMICOLON
  10                 | crowd_attributes

  11  crowd_attributes : crowd_attributes crowd_attribute
  12                   | empty

  13  crowd_attribute : c1
  14                  | c2
  15                  | c3
  16                  | c4

  17  c1 : Set SpendingCapacity NUMBER SEMICOLON

  18  c2 : Set Size NUMBER SEMICOLON

  19  c3 : Set EnergyLevel NUMBER SEMICOLON

  20  c4 : Set ThrillLevel NUMBER SEMICOLON

  21  $$3 :

  22  $$4 :

  23  $$5 :

  24  park_definition : Park $$3 park_name $$4 park_elements $$5 land_definitions

  25  park_elements : SEMICOLON
  26                | park_attributes

  27  park_attributes : park_attributes park_attribute
  28                  | empty

  29  park_attribute : p1
  30                 | p2
  31                 | p3

  32  p1 : Set Admission NUMBER SEMICOLON

  33  p2 : Set Capacity NUMBER SEMICOLON

  34  p3 : Set Cost NUMBER SEMICOLON

  35  land_definitions : land_definitions land_definition
  36                   | empty

  37  $$6 :

  38  $$7 :

  39  land_definition : Land $$6 land_name $$7 land_attributes land_elements

  40  land_attributes : SEMICOLON
  41                  | Set Location NUMBER SEMICOLON

  42  land_elements : land_elements land_element
  43                | empty

  44  land_element : attraction_definition
  45               | restaurant_definition
  46               | store_definition

  47  attraction_definition : Attraction attraction_name In land_name attraction_attributes

  48  attraction_attributes : SEMICOLON
  49                        | attraction_attributes attraction_attribute
  50                        | empty

  51  attraction_attribute : a1
  52                       | a2
  53                       | a3
  54                       | a4
  55                       | a5

  56  a1 : Set Cost NUMBER SEMICOLON

  57  a2 : Set Capacity NUMBER SEMICOLON

  58  a3 : Set Employees NUMBER SEMICOLON

  59  a4 : Set ThrillLevel NUMBER SEMICOLON

  60  a5 : Set EnergyLost NUMBER SEMICOLON

  61  restaurant_definition : Restaurant restaurant_name In land_name restaurant_attributes

  62  restaurant_attributes : SEMICOLON
  63                        | restaurant_attributes restaurant_attribute
  64                        | empty

  65  restaurant_attribute : r1
  66                       | r2
  67                       | r3
  68                       | r4
  69                       | r5

  70  r1 : Set Cost NUMBER SEMICOLON

  71  r2 : Set Capacity NUMBER SEMICOLON

  72  r3 : Set Employees NUMBER SEMICOLON

  73  r4 : Set SpendLevel NUMBER SEMICOLON

  74  r5 : Set EnergyIncrease NUMBER SEMICOLON

  75  $$8 :

  76  $$9 :

  77  $$10 :

  78  store_definition : Store $$8 store_name $$9 In land_name $$10 store_attributes

  79  store_attributes : SEMICOLON
  80                   | store_attributes store_attribute
  81                   | empty

  82  store_attribute : s1
  83                  | s2
  84                  | s3
  85                  | s4

  86  s1 : Set Cost NUMBER SEMICOLON

  87  s2 : Set Capacity NUMBER SEMICOLON

  88  s3 : Set Employees NUMBER SEMICOLON

  89  s4 : Set SpendLevel NUMBER SEMICOLON

  90  start : Start COLON block

  91  function : return_type function_name COLON actual_parameters block function
  92           | empty

  93  return_type : Number
  94              | String
  95              | empty

  96  actual_parameters : data_type variable_name actual_parameter
  97                    | empty

  98  actual_parameter : COMMA actual_parameters
  99                   | empty

 100  block : start_block statements end_block

 101  start_block : OPEN_PARAN

 102  end_block : CLOSE_PARAN

 103  statements : statements statement
 104             | empty

 105  statement : add_attraction_attribute
 106            | add_crowd_attribute
 107            | add_restaurant_attribute
 108            | add_store_attribute
 109            | assignment
 110            | condition
 111            | declaration
 112            | function_call
 113            | initialization
 114            | thrill_functions

 115  add_attraction_attribute : Set Cost value In attraction_name SEMICOLON
 116                           | Set Capacity value In attraction_name SEMICOLON
 117                           | Set Employees value In attraction_name SEMICOLON
 118                           | Set ThrillLevel value In attraction_name SEMICOLON
 119                           | Set EnergyLost value In attraction_name SEMICOLON

 120  add_crowd_attribute : Set Size value In crowd_name SEMICOLON
 121                      | Set EnergyLevel value In crowd_name SEMICOLON
 122                      | Set ThrillLevel value In crowd_name SEMICOLON
 123                      | Set SpendingCapacity value In crowd_name SEMICOLON

 124  add_restaurant_attribute : Set Cost value In restaurant_name SEMICOLON
 125                           | Set Capacity value In restaurant_name SEMICOLON
 126                           | Set Employees value In restaurant_name SEMICOLON
 127                           | Set SpendLevel value In restaurant_name SEMICOLON
 128                           | Set EnergyIncrease value In restaurant_name SEMICOLON

 129  add_store_attribute : Set Cost value SEMICOLON
 130                      | Set Capacity value In store_name SEMICOLON
 131                      | Set Employees value In store_name SEMICOLON
 132                      | Set SpendLevel value In store_name SEMICOLON

 133  assignment : left_side EQUAL right_side

 134  left_side : variable_name

 135  right_side : arithmetic_expression SEMICOLON
 136             | function_call

 137  arithmetic_expression : arithmetic_expression PLUS arithmetic_expression
 138                        | arithmetic_expression MINUS arithmetic_expression
 139                        | arithmetic_expression MUL arithmetic_expression
 140                        | arithmetic_expression DIV arithmetic_expression
 141                        | OPEN arithmetic_expression CLOSE
 142                        | variable_name
 143                        | constant

 144  condition : If OPEN relational_expression CLOSE block
 145            | If OPEN relational_expression CLOSE block Else block

 146  relational_expression : relational_expression LESSEQUAL relational_expression
 147                        | relational_expression GREATEQUAL relational_expression
 148                        | relational_expression NOTEQUAL relational_expression
 149                        | relational_expression LESS relational_expression
 150                        | relational_expression GREAT relational_expression
 151                        | OPEN relational_expression CLOSE
 152                        | variable_name
 153                        | constant

 154  declaration : primitive_type declaration_list

 155  declaration_list : variable_name COMMA declaration_list
 156                   | variable_name SEMICOLON

 157  function_call : function_name COLON formal_parameters SEMICOLON

 158  formal_parameters : variable_name formal_parameter
 159                    | empty

 160  formal_parameter : COMMA formal_parameters
 161                   | empty

 162  initialization : primitive_type initialization_list

 163  initialization_list : variable_name EQUAL constant SEMICOLON
 164                      | variable_name EQUAL constant COMMA initialization_list

 165  thrill_functions : calculate_revenue
 166                   | output
 167                   | simulate

 168  calculate_revenue : CalculateRevenue COLON Crowd crowd_name COMMA Duration duration_type

 169  duration_type : Days
 170                | Weeks
 171                | Months
 172                | Years

 173  output : Print constant_variable_chain

 174  simulate : Simulate COLON SEMICOLON

 175  constant_variable_chain : constant_or_variable PLUS constant_variable_chain
 176                          | constant_or_variable

 177  constant_or_variable : constant
 178                       | variable_name

 179  data_type : complex_type
 180            | primitive_type

 181  complex_type : Crowd
 182               | Duration

 183  primitive_type : Number
 184                 | String

 185  constant : NUMBER
 186           | Quote ID Quote

 187  value : NUMBER
 188        | variable_name

 189  attraction_name : variable_name

 190  crowd_name : variable_name

 191  function_name : variable_name

 192  land_name : variable_name

 193  park_name : variable_name

 194  restaurant_name : variable_name

 195  store_name : variable_name

 196  variable_name : ID

 197  empty :

state 0
	$accept : . program $end  (0)
	empty : .  (197)

	.  reduce 197

	program  goto 1
	definitions  goto 2
	crowd_definitions  goto 3
	empty  goto 4


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definitions . usercode  (1)

	Start  shift 5
	.  error

	usercode  goto 6
	start  goto 7


state 3
	definitions : crowd_definitions . park_definition crowd_definitions  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 8
	Park  shift 9
	.  error

	park_definition  goto 10
	crowd_definition  goto 11


state 4
	crowd_definitions : empty .  (4)

	.  reduce 4


state 5
	start : Start . COLON block  (90)

	COLON  shift 12
	.  error


state 6
	program : definitions usercode .  (1)

	.  reduce 1


state 7
	usercode : start .  (5)

	.  reduce 5


state 8
	crowd_definition : Crowd . $$1 crowd_name $$2 crowd_elements  (8)
	$$1 : .  (6)

	.  reduce 6

	$$1  goto 13


state 9
	park_definition : Park . $$3 park_name $$4 park_elements $$5 land_definitions  (24)
	$$3 : .  (21)

	.  reduce 21

	$$3  goto 14


state 10
	definitions : crowd_definitions park_definition . crowd_definitions  (2)
	empty : .  (197)

	.  reduce 197

	crowd_definitions  goto 15
	empty  goto 4


state 11
	crowd_definitions : crowd_definitions crowd_definition .  (3)

	.  reduce 3


state 12
	start : Start COLON . block  (90)

	OPEN_PARAN  shift 16
	.  error

	block  goto 17
	start_block  goto 18


state 13
	crowd_definition : Crowd $$1 . crowd_name $$2 crowd_elements  (8)

	ID  shift 19
	.  error

	crowd_name  goto 20
	variable_name  goto 21


state 14
	park_definition : Park $$3 . park_name $$4 park_elements $$5 land_definitions  (24)

	ID  shift 19
	.  error

	park_name  goto 22
	variable_name  goto 23


state 15
	definitions : crowd_definitions park_definition crowd_definitions .  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 8
	Start  reduce 2

	crowd_definition  goto 11


state 16
	start_block : OPEN_PARAN .  (101)

	.  reduce 101


state 17
	start : Start COLON block .  (90)

	.  reduce 90


state 18
	block : start_block . statements end_block  (100)
	empty : .  (197)

	.  reduce 197

	empty  goto 24
	statements  goto 25


state 19
	variable_name : ID .  (196)

	.  reduce 196


state 20
	crowd_definition : Crowd $$1 crowd_name . $$2 crowd_elements  (8)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 26


state 21
	crowd_name : variable_name .  (190)

	.  reduce 190


state 22
	park_definition : Park $$3 park_name . $$4 park_elements $$5 land_definitions  (24)
	$$4 : .  (22)

	.  reduce 22

	$$4  goto 27


state 23
	park_name : variable_name .  (193)

	.  reduce 193


state 24
	statements : empty .  (104)

	.  reduce 104


state 25
	block : start_block statements . end_block  (100)
	statements : statements . statement  (103)

	ID  shift 19
	CLOSE_PARAN  shift 28
	If  shift 29
	Number  shift 30
	Set  shift 31
	String  shift 32
	CalculateRevenue  shift 33
	Print  shift 34
	Simulate  shift 35
	.  error

	function_name  goto 36
	variable_name  goto 37
	end_block  goto 38
	statement  goto 39
	add_attraction_attribute  goto 40
	add_crowd_attribute  goto 41
	add_restaurant_attribute  goto 42
	add_store_attribute  goto 43
	assignment  goto 44
	condition  goto 45
	declaration  goto 46
	function_call  goto 47
	initialization  goto 48
	thrill_functions  goto 49
	left_side  goto 50
	primitive_type  goto 51
	calculate_revenue  goto 52
	output  goto 53
	simulate  goto 54


state 26
	crowd_definition : Crowd $$1 crowd_name $$2 . crowd_elements  (8)
	empty : .  (197)

	SEMICOLON  shift 55
	Crowd  reduce 197
	Park  reduce 197
	Set  reduce 197
	Start  reduce 197

	crowd_attributes  goto 56
	crowd_elements  goto 57
	empty  goto 58


state 27
	park_definition : Park $$3 park_name $$4 . park_elements $$5 land_definitions  (24)
	empty : .  (197)

	SEMICOLON  shift 59
	Crowd  reduce 197
	Land  reduce 197
	Set  reduce 197
	Start  reduce 197

	park_attributes  goto 60
	park_elements  goto 61
	empty  goto 62


state 28
	end_block : CLOSE_PARAN .  (102)

	.  reduce 102


state 29
	condition : If . OPEN relational_expression CLOSE block  (144)
	condition : If . OPEN relational_expression CLOSE block Else block  (145)

	OPEN  shift 63
	.  error


state 30
	primitive_type : Number .  (183)

	.  reduce 183


state 31
	add_attraction_attribute : Set . Cost value In attraction_name SEMICOLON  (115)
	add_attraction_attribute : Set . Capacity value In attraction_name SEMICOLON  (116)
	add_attraction_attribute : Set . Employees value In attraction_name SEMICOLON  (117)
	add_attraction_attribute : Set . ThrillLevel value In attraction_name SEMICOLON  (118)
	add_attraction_attribute : Set . EnergyLost value In attraction_name SEMICOLON  (119)
	add_crowd_attribute : Set . Size value In crowd_name SEMICOLON  (120)
	add_crowd_attribute : Set . EnergyLevel value In crowd_name SEMICOLON  (121)
	add_crowd_attribute : Set . ThrillLevel value In crowd_name SEMICOLON  (122)
	add_crowd_attribute : Set . SpendingCapacity value In crowd_name SEMICOLON  (123)
	add_restaurant_attribute : Set . Cost value In restaurant_name SEMICOLON  (124)
	add_restaurant_attribute : Set . Capacity value In restaurant_name SEMICOLON  (125)
	add_restaurant_attribute : Set . Employees value In restaurant_name SEMICOLON  (126)
	add_restaurant_attribute : Set . SpendLevel value In restaurant_name SEMICOLON  (127)
	add_restaurant_attribute : Set . EnergyIncrease value In restaurant_name SEMICOLON  (128)
	add_store_attribute : Set . Cost value SEMICOLON  (129)
	add_store_attribute : Set . Capacity value In store_name SEMICOLON  (130)
	add_store_attribute : Set . Employees value In store_name SEMICOLON  (131)
	add_store_attribute : Set . SpendLevel value In store_name SEMICOLON  (132)

	Capacity  shift 64
	Cost  shift 65
	Employees  shift 66
	EnergyIncrease  shift 67
	EnergyLevel  shift 68
	EnergyLost  shift 69
	Size  shift 70
	SpendLevel  shift 71
	SpendingCapacity  shift 72
	ThrillLevel  shift 73
	.  error


state 32
	primitive_type : String .  (184)

	.  reduce 184


state 33
	calculate_revenue : CalculateRevenue . COLON Crowd crowd_name COMMA Duration duration_type  (168)

	COLON  shift 74
	.  error


state 34
	output : Print . constant_variable_chain  (173)

	NUMBER  shift 75
	ID  shift 19
	Quote  shift 76
	.  error

	variable_name  goto 77
	constant  goto 78
	constant_variable_chain  goto 79
	constant_or_variable  goto 80


state 35
	simulate : Simulate . COLON SEMICOLON  (174)

	COLON  shift 81
	.  error


state 36
	function_call : function_name . COLON formal_parameters SEMICOLON  (157)

	COLON  shift 82
	.  error


state 37
	left_side : variable_name .  (134)
	function_name : variable_name .  (191)

	COLON  reduce 191
	EQUAL  reduce 134


state 38
	block : start_block statements end_block .  (100)

	.  reduce 100


state 39
	statements : statements statement .  (103)

	.  reduce 103


state 40
	statement : add_attraction_attribute .  (105)

	.  reduce 105


state 41
	statement : add_crowd_attribute .  (106)

	.  reduce 106


state 42
	statement : add_restaurant_attribute .  (107)

	.  reduce 107


state 43
	statement : add_store_attribute .  (108)

	.  reduce 108


state 44
	statement : assignment .  (109)

	.  reduce 109


state 45
	statement : condition .  (110)

	.  reduce 110


state 46
	statement : declaration .  (111)

	.  reduce 111


state 47
	statement : function_call .  (112)

	.  reduce 112


state 48
	statement : initialization .  (113)

	.  reduce 113


state 49
	statement : thrill_functions .  (114)

	.  reduce 114


state 50
	assignment : left_side . EQUAL right_side  (133)

	EQUAL  shift 83
	.  error


state 51
	declaration : primitive_type . declaration_list  (154)
	initialization : primitive_type . initialization_list  (162)

	ID  shift 19
	.  error

	variable_name  goto 84
	declaration_list  goto 85
	initialization_list  goto 86


state 52
	thrill_functions : calculate_revenue .  (165)

	.  reduce 165


state 53
	thrill_functions : output .  (166)

	.  reduce 166


state 54
	thrill_functions : simulate .  (167)

	.  reduce 167


state 55
	crowd_elements : SEMICOLON .  (9)

	.  reduce 9


state 56
	crowd_elements : crowd_attributes .  (10)
	crowd_attributes : crowd_attributes . crowd_attribute  (11)

	Set  shift 87
	Crowd  reduce 10
	Park  reduce 10
	Start  reduce 10

	crowd_attribute  goto 88
	c1  goto 89
	c2  goto 90
	c3  goto 91
	c4  goto 92


state 57
	crowd_definition : Crowd $$1 crowd_name $$2 crowd_elements .  (8)

	.  reduce 8


state 58
	crowd_attributes : empty .  (12)

	.  reduce 12


state 59
	park_elements : SEMICOLON .  (25)

	.  reduce 25


state 60
	park_elements : park_attributes .  (26)
	park_attributes : park_attributes . park_attribute  (27)

	Set  shift 93
	Crowd  reduce 26
	Land  reduce 26
	Start  reduce 26

	park_attribute  goto 94
	p1  goto 95
	p2  goto 96
	p3  goto 97


state 61
	park_definition : Park $$3 park_name $$4 park_elements . $$5 land_definitions  (24)
	$$5 : .  (23)

	.  reduce 23

	$$5  goto 98


state 62
	park_attributes : empty .  (28)

	.  reduce 28


state 63
	condition : If OPEN . relational_expression CLOSE block  (144)
	condition : If OPEN . relational_expression CLOSE block Else block  (145)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 102


state 64
	add_attraction_attribute : Set Capacity . value In attraction_name SEMICOLON  (116)
	add_restaurant_attribute : Set Capacity . value In restaurant_name SEMICOLON  (125)
	add_store_attribute : Set Capacity . value In store_name SEMICOLON  (130)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 105


state 65
	add_attraction_attribute : Set Cost . value In attraction_name SEMICOLON  (115)
	add_restaurant_attribute : Set Cost . value In restaurant_name SEMICOLON  (124)
	add_store_attribute : Set Cost . value SEMICOLON  (129)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 106


state 66
	add_attraction_attribute : Set Employees . value In attraction_name SEMICOLON  (117)
	add_restaurant_attribute : Set Employees . value In restaurant_name SEMICOLON  (126)
	add_store_attribute : Set Employees . value In store_name SEMICOLON  (131)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 107


state 67
	add_restaurant_attribute : Set EnergyIncrease . value In restaurant_name SEMICOLON  (128)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 108


state 68
	add_crowd_attribute : Set EnergyLevel . value In crowd_name SEMICOLON  (121)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 109


state 69
	add_attraction_attribute : Set EnergyLost . value In attraction_name SEMICOLON  (119)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 110


state 70
	add_crowd_attribute : Set Size . value In crowd_name SEMICOLON  (120)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 111


state 71
	add_restaurant_attribute : Set SpendLevel . value In restaurant_name SEMICOLON  (127)
	add_store_attribute : Set SpendLevel . value In store_name SEMICOLON  (132)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 112


state 72
	add_crowd_attribute : Set SpendingCapacity . value In crowd_name SEMICOLON  (123)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 113


state 73
	add_attraction_attribute : Set ThrillLevel . value In attraction_name SEMICOLON  (118)
	add_crowd_attribute : Set ThrillLevel . value In crowd_name SEMICOLON  (122)

	NUMBER  shift 103
	ID  shift 19
	.  error

	variable_name  goto 104
	value  goto 114


state 74
	calculate_revenue : CalculateRevenue COLON . Crowd crowd_name COMMA Duration duration_type  (168)

	Crowd  shift 115
	.  error


state 75
	constant : NUMBER .  (185)

	.  reduce 185


state 76
	constant : Quote . ID Quote  (186)

	ID  shift 116
	.  error


state 77
	constant_or_variable : variable_name .  (178)

	.  reduce 178


state 78
	constant_or_variable : constant .  (177)

	.  reduce 177


state 79
	output : Print constant_variable_chain .  (173)

	.  reduce 173


state 80
	constant_variable_chain : constant_or_variable . PLUS constant_variable_chain  (175)
	constant_variable_chain : constant_or_variable .  (176)

	PLUS  shift 117
	ID  reduce 176
	CLOSE_PARAN  reduce 176
	If  reduce 176
	Number  reduce 176
	Set  reduce 176
	String  reduce 176
	CalculateRevenue  reduce 176
	Print  reduce 176
	Simulate  reduce 176


state 81
	simulate : Simulate COLON . SEMICOLON  (174)

	SEMICOLON  shift 118
	.  error


state 82
	function_call : function_name COLON . formal_parameters SEMICOLON  (157)
	empty : .  (197)

	ID  shift 19
	SEMICOLON  reduce 197

	variable_name  goto 119
	empty  goto 120
	formal_parameters  goto 121


state 83
	assignment : left_side EQUAL . right_side  (133)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 122
	Quote  shift 76
	.  error

	function_name  goto 36
	variable_name  goto 123
	function_call  goto 124
	right_side  goto 125
	arithmetic_expression  goto 126
	constant  goto 127


state 84
	declaration_list : variable_name . COMMA declaration_list  (155)
	declaration_list : variable_name . SEMICOLON  (156)
	initialization_list : variable_name . EQUAL constant SEMICOLON  (163)
	initialization_list : variable_name . EQUAL constant COMMA initialization_list  (164)

	SEMICOLON  shift 128
	COMMA  shift 129
	EQUAL  shift 130
	.  error


state 85
	declaration : primitive_type declaration_list .  (154)

	.  reduce 154


state 86
	initialization : primitive_type initialization_list .  (162)

	.  reduce 162


state 87
	c1 : Set . SpendingCapacity NUMBER SEMICOLON  (17)
	c2 : Set . Size NUMBER SEMICOLON  (18)
	c3 : Set . EnergyLevel NUMBER SEMICOLON  (19)
	c4 : Set . ThrillLevel NUMBER SEMICOLON  (20)

	EnergyLevel  shift 131
	Size  shift 132
	SpendingCapacity  shift 133
	ThrillLevel  shift 134
	.  error


state 88
	crowd_attributes : crowd_attributes crowd_attribute .  (11)

	.  reduce 11


state 89
	crowd_attribute : c1 .  (13)

	.  reduce 13


state 90
	crowd_attribute : c2 .  (14)

	.  reduce 14


state 91
	crowd_attribute : c3 .  (15)

	.  reduce 15


state 92
	crowd_attribute : c4 .  (16)

	.  reduce 16


state 93
	p1 : Set . Admission NUMBER SEMICOLON  (32)
	p2 : Set . Capacity NUMBER SEMICOLON  (33)
	p3 : Set . Cost NUMBER SEMICOLON  (34)

	Admission  shift 135
	Capacity  shift 136
	Cost  shift 137
	.  error


state 94
	park_attributes : park_attributes park_attribute .  (27)

	.  reduce 27


state 95
	park_attribute : p1 .  (29)

	.  reduce 29


state 96
	park_attribute : p2 .  (30)

	.  reduce 30


state 97
	park_attribute : p3 .  (31)

	.  reduce 31


state 98
	park_definition : Park $$3 park_name $$4 park_elements $$5 . land_definitions  (24)
	empty : .  (197)

	.  reduce 197

	empty  goto 138
	land_definitions  goto 139


state 99
	relational_expression : OPEN . relational_expression CLOSE  (151)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 140


state 100
	relational_expression : variable_name .  (152)

	.  reduce 152


state 101
	relational_expression : constant .  (153)

	.  reduce 153


state 102
	condition : If OPEN relational_expression . CLOSE block  (144)
	condition : If OPEN relational_expression . CLOSE block Else block  (145)
	relational_expression : relational_expression . LESSEQUAL relational_expression  (146)
	relational_expression : relational_expression . GREATEQUAL relational_expression  (147)
	relational_expression : relational_expression . NOTEQUAL relational_expression  (148)
	relational_expression : relational_expression . LESS relational_expression  (149)
	relational_expression : relational_expression . GREAT relational_expression  (150)

	NOTEQUAL  shift 141
	LESSEQUAL  shift 142
	GREATEQUAL  shift 143
	LESS  shift 144
	GREAT  shift 145
	CLOSE  shift 146
	.  error


state 103
	value : NUMBER .  (187)

	.  reduce 187


state 104
	value : variable_name .  (188)

	.  reduce 188


state 105
	add_attraction_attribute : Set Capacity value . In attraction_name SEMICOLON  (116)
	add_restaurant_attribute : Set Capacity value . In restaurant_name SEMICOLON  (125)
	add_store_attribute : Set Capacity value . In store_name SEMICOLON  (130)

	In  shift 147
	.  error


state 106
	add_attraction_attribute : Set Cost value . In attraction_name SEMICOLON  (115)
	add_restaurant_attribute : Set Cost value . In restaurant_name SEMICOLON  (124)
	add_store_attribute : Set Cost value . SEMICOLON  (129)

	SEMICOLON  shift 148
	In  shift 149
	.  error


state 107
	add_attraction_attribute : Set Employees value . In attraction_name SEMICOLON  (117)
	add_restaurant_attribute : Set Employees value . In restaurant_name SEMICOLON  (126)
	add_store_attribute : Set Employees value . In store_name SEMICOLON  (131)

	In  shift 150
	.  error


state 108
	add_restaurant_attribute : Set EnergyIncrease value . In restaurant_name SEMICOLON  (128)

	In  shift 151
	.  error


state 109
	add_crowd_attribute : Set EnergyLevel value . In crowd_name SEMICOLON  (121)

	In  shift 152
	.  error


state 110
	add_attraction_attribute : Set EnergyLost value . In attraction_name SEMICOLON  (119)

	In  shift 153
	.  error


state 111
	add_crowd_attribute : Set Size value . In crowd_name SEMICOLON  (120)

	In  shift 154
	.  error


state 112
	add_restaurant_attribute : Set SpendLevel value . In restaurant_name SEMICOLON  (127)
	add_store_attribute : Set SpendLevel value . In store_name SEMICOLON  (132)

	In  shift 155
	.  error


state 113
	add_crowd_attribute : Set SpendingCapacity value . In crowd_name SEMICOLON  (123)

	In  shift 156
	.  error


state 114
	add_attraction_attribute : Set ThrillLevel value . In attraction_name SEMICOLON  (118)
	add_crowd_attribute : Set ThrillLevel value . In crowd_name SEMICOLON  (122)

	In  shift 157
	.  error


state 115
	calculate_revenue : CalculateRevenue COLON Crowd . crowd_name COMMA Duration duration_type  (168)

	ID  shift 19
	.  error

	crowd_name  goto 158
	variable_name  goto 21


state 116
	constant : Quote ID . Quote  (186)

	Quote  shift 159
	.  error


state 117
	constant_variable_chain : constant_or_variable PLUS . constant_variable_chain  (175)

	NUMBER  shift 75
	ID  shift 19
	Quote  shift 76
	.  error

	variable_name  goto 77
	constant  goto 78
	constant_variable_chain  goto 160
	constant_or_variable  goto 80


state 118
	simulate : Simulate COLON SEMICOLON .  (174)

	.  reduce 174


state 119
	formal_parameters : variable_name . formal_parameter  (158)
	empty : .  (197)

	COMMA  shift 161
	SEMICOLON  reduce 197

	empty  goto 162
	formal_parameter  goto 163


state 120
	formal_parameters : empty .  (159)

	.  reduce 159


state 121
	function_call : function_name COLON formal_parameters . SEMICOLON  (157)

	SEMICOLON  shift 164
	.  error


state 122
	arithmetic_expression : OPEN . arithmetic_expression CLOSE  (141)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 122
	Quote  shift 76
	.  error

	variable_name  goto 165
	arithmetic_expression  goto 166
	constant  goto 127


state 123
	arithmetic_expression : variable_name .  (142)
	function_name : variable_name .  (191)

	SEMICOLON  reduce 142
	COLON  reduce 191
	PLUS  reduce 142
	MINUS  reduce 142
	MUL  reduce 142
	DIV  reduce 142


state 124
	right_side : function_call .  (136)

	.  reduce 136


state 125
	assignment : left_side EQUAL right_side .  (133)

	.  reduce 133


state 126
	right_side : arithmetic_expression . SEMICOLON  (135)
	arithmetic_expression : arithmetic_expression . PLUS arithmetic_expression  (137)
	arithmetic_expression : arithmetic_expression . MINUS arithmetic_expression  (138)
	arithmetic_expression : arithmetic_expression . MUL arithmetic_expression  (139)
	arithmetic_expression : arithmetic_expression . DIV arithmetic_expression  (140)

	SEMICOLON  shift 167
	PLUS  shift 168
	MINUS  shift 169
	MUL  shift 170
	DIV  shift 171
	.  error


state 127
	arithmetic_expression : constant .  (143)

	.  reduce 143


state 128
	declaration_list : variable_name SEMICOLON .  (156)

	.  reduce 156


state 129
	declaration_list : variable_name COMMA . declaration_list  (155)

	ID  shift 19
	.  error

	variable_name  goto 172
	declaration_list  goto 173


state 130
	initialization_list : variable_name EQUAL . constant SEMICOLON  (163)
	initialization_list : variable_name EQUAL . constant COMMA initialization_list  (164)

	NUMBER  shift 75
	Quote  shift 76
	.  error

	constant  goto 174


state 131
	c3 : Set EnergyLevel . NUMBER SEMICOLON  (19)

	NUMBER  shift 175
	.  error


state 132
	c2 : Set Size . NUMBER SEMICOLON  (18)

	NUMBER  shift 176
	.  error


state 133
	c1 : Set SpendingCapacity . NUMBER SEMICOLON  (17)

	NUMBER  shift 177
	.  error


state 134
	c4 : Set ThrillLevel . NUMBER SEMICOLON  (20)

	NUMBER  shift 178
	.  error


state 135
	p1 : Set Admission . NUMBER SEMICOLON  (32)

	NUMBER  shift 179
	.  error


state 136
	p2 : Set Capacity . NUMBER SEMICOLON  (33)

	NUMBER  shift 180
	.  error


state 137
	p3 : Set Cost . NUMBER SEMICOLON  (34)

	NUMBER  shift 181
	.  error


state 138
	land_definitions : empty .  (36)

	.  reduce 36


state 139
	park_definition : Park $$3 park_name $$4 park_elements $$5 land_definitions .  (24)
	land_definitions : land_definitions . land_definition  (35)

	Land  shift 182
	Crowd  reduce 24
	Start  reduce 24

	land_definition  goto 183


state 140
	relational_expression : relational_expression . LESSEQUAL relational_expression  (146)
	relational_expression : relational_expression . GREATEQUAL relational_expression  (147)
	relational_expression : relational_expression . NOTEQUAL relational_expression  (148)
	relational_expression : relational_expression . LESS relational_expression  (149)
	relational_expression : relational_expression . GREAT relational_expression  (150)
	relational_expression : OPEN relational_expression . CLOSE  (151)

	NOTEQUAL  shift 141
	LESSEQUAL  shift 142
	GREATEQUAL  shift 143
	LESS  shift 144
	GREAT  shift 145
	CLOSE  shift 184
	.  error


state 141
	relational_expression : relational_expression NOTEQUAL . relational_expression  (148)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 185


state 142
	relational_expression : relational_expression LESSEQUAL . relational_expression  (146)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 186


state 143
	relational_expression : relational_expression GREATEQUAL . relational_expression  (147)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 187


state 144
	relational_expression : relational_expression LESS . relational_expression  (149)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 188


state 145
	relational_expression : relational_expression GREAT . relational_expression  (150)

	NUMBER  shift 75
	ID  shift 19
	OPEN  shift 99
	Quote  shift 76
	.  error

	variable_name  goto 100
	constant  goto 101
	relational_expression  goto 189


state 146
	condition : If OPEN relational_expression CLOSE . block  (144)
	condition : If OPEN relational_expression CLOSE . block Else block  (145)

	OPEN_PARAN  shift 16
	.  error

	block  goto 190
	start_block  goto 18


state 147
	add_attraction_attribute : Set Capacity value In . attraction_name SEMICOLON  (116)
